--- a/files/src/styles/settings.css
+++ b/files/src/styles/settings.css
@@ -1,3 +1,10 @@
+@import './style.css';
+@import './firstSteps.css';
+
+body {
+    background-color: #fff;
+}
+
 #main {
     width: 380px;
     margin: 0 auto;
