--- a/files/src/styles/style.css
+++ b/files/src/styles/style.css
@@ -320,3 +320,50 @@ footer span {
 #back:hover {
     filter: contrast(1.5) invert(1);
 }
+
+img.desc {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    cursor: help;
+}
+
+img.desc:hover {
+    filter: contrast(0.5);
+}
+
+div.info {
+    position: relative;
+}
+
+div.search {
+    position: fixed;
+    text-align: center;
+    top: 0;
+    background: none;
+    z-index: 2;
+    width: 300px;
+    left: 50%;
+    margin-left: -150px;
+}
+
+div.search > label[for='search'] {
+    font-size: 0.7em;
+    position: relative;
+    bottom: 1.5px;
+}
+
+#search {
+    display: inline-block;
+    height: 24px;
+    margin-left: 10px;
+    font-size: 0.9em;
+}
+
+#search:focus {
+    outline: 0 !important;
+    outline-color: transparent !important;
+    outline-width: 0 !important;
+    outline-style: none !important;
+    box-shadow: 0 0 0 0 rgba(0,123,255,0) !important;
+}
